--- a/server-document-management/pom.xml
+++ b/server-document-management/pom.xml
@@ -7,6 +7,18 @@
     <groupId>server-document-management</groupId>
     <artifactId>server-document-management</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.1.1.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.1.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
