--- a/server-document-management/src/main/resources/application.properties
+++ b/server-document-management/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/test
-spring.datasource.username=dbuser
-spring.datasource.password=dbpass
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+database.url=jdbc:mysql://localhost:3306/zangshop
+database.driver=com.mysql.jdbc.Driver
+database.user=root
+database.password=password
+database.maxConnections=25
