--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -4,81 +4,62 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --history-api-fallback --host 0.0.0.0",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-0"
-    ],
-    "plugins": [
-      "react-hot-loader/babel"
-    ]
+    "start": "webpack-dev-server",
+    "build": "webpack --config webpack.dev.config.js --progress --profile --colors"
   },
   "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^5.0.6",
-    "react-redux-i18n": "^1.8.0",
-    "react-router": "^3.0.0",
-    "react-router-bootstrap": "^0.23.1",
-    "react-router-redux": "^4.0.7",
+    "babel-polyfill": "6.26.0",
+    "normalize.css": "^7.0.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^6.0.1",
+    "react-redux-i18n": "^1.9.3",
     "redux": "^4.0.1",
+    "redux-freeze": "^0.1.7",
     "redux-saga": "^1.0.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "license-checker": "^13.0.2",
-    "babel-core": "^6.25.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.0.4",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-webpack-alias": "2.1.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.25.0",
-    "clean-webpack-plugin": "^0.1.16",
-    "ignore-styles": "^5.0.1",
-    "mocha": "^3.1.2",
-    "enzyme": "^2.6.0",
-    "chai-enzyme": "^0.6.1",
-    "chai": "^3.5.0",
-    "redux-mock-store": "^1.2.2",
-    "jsdom": "^11.1.0",
-    "node-sass": "^4.5.3",
-    "react-addons-test-utils": "^15.6.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "redux-freeze": "^0.1.5",
-    "url-loader": "^0.5.9",
-    "file-loader": "^0.11.2",
-    "css-loader": "^0.28.4",
-    "style-loader": "^0.18.2",
-    "babel-loader": "^7.1.1",
-    "sass-loader": "^6.0.6",
-    "webpack": "^3.4.1",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "babel-runtime": "^6.26.0",
+    "css-loader": "^0.28.11",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.13.1",
+    "eslint-plugin-jest": "^21.5.0",
+    "eslint-plugin-react": "^7.5.1",
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
-    "webpack-dev-server": "^2.6.1",
-    "react-image-magnify": "^2.3.2",
-    "whatwg-fetch": "^2.0.3",
-    "lodash.debounce": "^4.0.8",
-    "react-moment": "^0.6.8",
-    "react-day-picker": "^5.1.0",
-    "react-bootstrap-date-picker": "^5.1.0",
-    "react-crop": "^4.0.2",
-    "react-cropper": "^1.0.1",
-    "react-darkroom": "^0.3.7",
-    "react-image-crop": "^3.0.10",
-    "react-image-cropper": "^1.3.0",
-    "react-native-image-crop": "^1.0.2",
-    "react-native-image-crop-picker": "^0.20.0",
-    "react-native-image-rotate": "^2.1.0",
-    "react-rangeslider": "^2.2.0",
-    "react-rotation": "^1.3.0"
+    "jest": "^22.0.4",
+    "loglevel": "^1.6.0",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.9",
+    "react-hot-loader": "^4.0.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
+    "react-test-renderer": "^16.2.0",
+    "sass-loader": "^6.0.7",
+    "sass-resources-loader": "1.3.2",
+    "source-map-loader": "0.2.3",
+    "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-dashboard": "^1.0.2",
+    "webpack-dev-middleware": "^3.6.0",
+    "webpack-dev-server": "^2.11.3",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
