--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^1.0.1",
     "normalize.css": "^7.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^6.0.1",
@@ -22,6 +23,7 @@
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.7",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "redux-freeze": "^0.1.7",
     "redux-saga": "^1.0.1",
     "redux-thunk": "^2.3.0",
