--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -13,13 +13,14 @@
     "babel-preset-es2016": "^6.24.1",
     "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^1.0.1",
+    "history": "^4.7.2",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^6.0.1",
     "react-redux-i18n": "^1.9.3",
-    "react-router": "^3.0.0",
+    "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.7",
     "redux": "^4.0.1",
@@ -56,7 +57,7 @@
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.9",
     "react-hot-loader": "^4.0.0",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.4.0-beta.6",
     "react-router-redux": "^4.0.8",
     "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.7",
