--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -11,6 +11,7 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^1.0.1",
     "history": "^4.7.2",
