--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -18,6 +18,7 @@
     "normalize.css": "^7.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.2.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.2.0",
     "react-redux": "^6.0.1",
     "react-redux-i18n": "^1.9.3",
