--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -15,10 +15,11 @@
     "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^1.0.1",
     "history": "^4.7.2",
+    "normalize-scss": "^7.0.1",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.2.0",
-    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.2.0",
     "react-redux": "^6.0.1",
     "react-redux-i18n": "^1.9.3",
@@ -54,14 +55,11 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.0.4",
-    "loglevel": "^1.6.0",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.9",
     "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.4.0-beta.6",
     "react-router-redux": "^4.0.8",
-    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "1.3.2",
     "source-map-loader": "0.2.3",
