--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -58,7 +58,7 @@
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.9",
     "react-hot-loader": "^4.0.0",
-    "react-router-dom": "^4.4.0-beta.6",
+    "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.8",
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "1.3.2",
