--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^1.0.1",
     "history": "^4.7.2",
+    "local-storage": "^2.0.0",
     "normalize-scss": "^7.0.1",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.7.2",
@@ -26,6 +27,7 @@
     "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.7",
+    "react-spinners": "^0.6.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-freeze": "^0.1.7",
