--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -28,6 +28,7 @@
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.7",
     "react-spinners": "^0.6.1",
+    "react-table": "^6.10.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-freeze": "^0.1.7",
