--- a/client-document-management/src/main/frontend/package.json
+++ b/client-document-management/src/main/frontend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack --config webpack.dev.config.js --progress --profile --colors"
+    "build": "webpack"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
@@ -16,6 +16,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "history": "^4.7.2",
     "local-storage": "^2.0.0",
+    "node-gyp": "^5.0.3",
     "normalize-scss": "^7.0.1",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.7.2",
@@ -48,6 +49,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "css-hot-loader": "^1.4.4",
     "css-loader": "^0.28.11",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -58,7 +60,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "postcss-loader": "^2.0.9",
     "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.0.0",
